--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,14 +44,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
-    implementation 'com.github.Naurt-Ltd-Public:naurt-android-sdk:v1.8.4'
+    implementation 'com.github.Naurt-Ltd-Public:naurt-android-sdk:v1.10.0'
+
+    // Kotlin/x + coroutines
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.databinding:databinding-runtime:7.1.2'
     implementation "androidx.work:work-runtime-ktx:2.7.1"
     implementation 'androidx.concurrent:concurrent-futures:1.1.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-native-mt'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0-native-mt'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+
+    // Core Functionality
     implementation 'net.java.dev.jna:jna:5.11.0@aar'
     implementation 'org.apache.commons:commons-compress:1.21'
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
